--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
   <head>
-    <!-- <meta charset="UTF-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
-    <script src="./dist/main.js"></script> -->
+    <script src="./dist/main.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>DK FM</title>
-    <link rel="icon" type="image/x-icon" href="./dkfm_wip_black.gif">
+    <link rel="icon" type="image/x-icon" href="./dist/dkfm_wip_black.gif">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="./main.css" />
+    <link rel="stylesheet" type="text/css" href="./dist/main.css" />
     <link rel="stylesheet" type="text/css" href="/src/index.scss" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
     </div>
 
     <div >
-      <img id="top_logo" src="./dkfm_wip_white.gif" alt="">
+      <img id="top_logo" src="./dist/dkfm_wip_white.gif" alt="">
     </div>
 
     <div id=""full_screen> 
@@ -115,7 +115,7 @@
     <i class="fas fa-flushed" id="info_button"></i>
   </div>
 
-    <script src="./test.js"></script>
+    <script src="./dist/test.js"></script>
   </body>
 
 </html>
