--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <br>
         HotKeys : <br>
         B: Change Background N: Next Song M: Mute P: Pause F: Full Screen<br>
-        Click the smiley to toggle instructions
+        Press T or click the smiley to toggle instructions
 
     </div>
 
