--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         Click the logo in the top left to start over <br>
         <br>
         HotKeys : <br>
-        B: Change Background N: Next Song M: Mute P: Pause F: Full Screen<br>
+        B: Change Background N: Next Song R: Reset M: Mute P: Pause F: Full Screen<br>
         Press T or Click the smiley to toggle instructions
 
     </div>
