--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <option value="Dark">Dark</option>
             </select>  
             <select class="genre_selector" name="genre" id="genre">
-              <option value="selected" selected="selected" disabled>Genre</option>
+              <option value="Genre" selected="selected" disabled>Genre</option>
               <option value="Piano">Piano</option>
               <option value="Electronic">Electronic</option>
             </select>  
@@ -69,9 +69,7 @@
 
     <container id="dkfm">
       <div class="music_player">
-        <!-- <div class="music_player_progress">
-          <div class="progress"></div>
-        </div> -->
+
         <button id="play_pauseButton" onclick="playPause()">
           <i class="fas fa-play"></i> 
         </button>
