--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
   <body class="body">
     <div id="instructions">
-        <p>  Welcome to DK-FM <br />Use the drop down menus to select the music you're in the mood for
-        Click the logo in the top left to start over <br>
+        <p>  Welcome to DK-FM <br />
+        Use the drop down menus to select the music you're in the mood for <br>
         <br>
         HotKeys : <br>
         B: Change Background N: Next Song R: Reset M: Mute <br>
@@ -62,7 +62,7 @@
               <option value="Genre" selected="selected" disabled>Genre</option>
               <option value="Piano">Piano</option>
               <option value="Electronic">Electronic</option>
-            </select>  
+            </select>  <br />
             <input id="start_button" value="Take Me Away" type="submit"></input>
           </form>
         </div>
