--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
       <div class="music_player">
 
         <button id="play_pauseButton" class="music_player_buttons" onclick="playPause()">
-          <i class="fas fa-play" id="playlogo"></i> 
-          <i class="fas fa-pause" id='pauselogo'></i>
+          <i class="fas fa-play musicplayer_buttons" id="playlogo"></i> 
+          <i class="fas fa-pause musicplayer_buttons" id='pauselogo'></i>
         </button>
 
         <button id="skip_button" class="music_player_buttons" onclick="nextSong()">
-          <i class="fas fa-step-forward"></i> 
+          <i class="fas fa-step-forward musicplayer_buttons"></i> 
         </button>
 
 
@@ -88,7 +88,7 @@
         <div class="slider_container">
           
           <button id="volume" class="music_player_buttons" onclick="">
-            <i class="fas fa-volume-up"></i>
+            <i class="fas fa-volume-up musicplayer_buttons" ></i>
           </button>
 
         
