--- a/index.html
+++ b/index.html
@@ -54,14 +54,12 @@
         <div class="form-container">
           <form id='session_start' >
             <select class="mood_selector" name="mood" id="mood" data-id="mood">
-              <option selected="true" disabled="disabled">Mood</option>
-              <option value="Chill" >Chill</option>
-              <option value="Dark">Dark</option>
+              <option selected="true" value="Sophie">for Sophie</option>
             </select>  
             <select class="genre_selector" name="genre" id="genre">
-              <option value="Genre" selected="selected" disabled>Genre</option>
-              <option value="Piano">Piano</option>
-              <option value="Electronic">Electronic</option>
+              <option value="Genre" selected="selected" >Backgrounds</option>
+              <option value="Light">Light</option>
+              <option value="Dark">Dark</option>
             </select>  <br />
             <input id="start_button" value="Take Me Away" type="submit"></input>
           </form>
